messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-active
  namespace: messaging
  annotations:
    strategy: blue-green
spec:
  selector:
    app: messaging-app
    version: blue
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-green-preview
  namespace: messaging
spec:
  selector:
    app: messaging-app
    version: green
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
